<resources>
    <string name="app_name">Vamp Survivor</string>
    <string name="start_game">Start Game</string>
    <string name="load_game">Load Progress</string>
    <string name="resume_game">Resume Game</string>
    <string name="select_character">Select Your Hunter</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="quit">Quit</string>
    <string name="game_over">Game Over</string>
    <string name="return_menu">Return to Menu</string>
    <string name="no_save_found">No saved progress found.</string>
    <string name="character_speedster">Speedster</string>
    <string name="character_tank">Tank</string>
    <string name="character_mage">Mage</string>
    <string name="upgrade_title">Choose an upgrade</string>
    <string name="upgrade_damage">Increase damage</string>
    <string name="upgrade_attack_speed">Increase attack speed</string>
    <string name="upgrade_move_speed">Increase move speed</string>
    <string name="upgrade_double_shot">Double shot</string>
    <string name="upgrade_shockwave">Shockwave pulse</string>
    <string name="upgrade_regeneration">Regeneration</string>
    <string name="upgrade_laser_barrage">Laser barrage</string>
    <string name="upgrade_base_pulse">Sanctuary pulse</string>
    <string name="upgrade_piercing_shot">Piercing shot</string>
    <string name="upgrade_orbital_blades">Orbital blades</string>
    <string name="pause_skill_header">Equipped skills</string>
    <string name="pause_skill_empty">No upgrades acquired yet.</string>
    <string name="hud_xp_format">%1$d%% XP</string>
</resources>
